Fixed #18 - added comment

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,10 @@ NEWS in coming 0.13
 
   * Github issue #13 "create-client-conf function not working" (hesa)
 
+  * Github issue #18 "Virtual machine names can not have spaces in them" (hesa)
+
+
+
 
 
 
