--- a/NEWS
+++ b/NEWS
@@ -15,10 +15,4 @@ NEWS in coming 0.13
 
   * Github issue #18 "Virtual machine names can not have spaces in them" (hesa)
 
-
-
-
-
-
-
-
+  * Fixed a bug which prohibited starting headless machines
