added info about removed --check-machine option

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
 NEWS in coming 0.13
 
-  New options:
+  New tm-vmm options:
+    --check-machine-status - checks the statuf of a machine (hesa) 
 
-  --check-machine-status - checks the statuf of a machine (hesa) 
+  Removed tm-vmm options:
+    --check-machine - replaced by --check-machine-status
 
 
   Fixes:
