Modify and fix various --*-machine options (and break a few)
`get_info_for_machine' now works without client configuration.

This involved replacing `is_client_up' calls with `is_vbox_up', for
now. Later, we need a `is_machine_up' function, or similar.

A limitation in this patch is that it breaks Android machines (not
Android clients), and possibly also QEMU machines. This will most
likely be fixed early next week.

A client configuration is now optional in several places, most notably
in `stop_helper'.

--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,26 @@
 NEWS in coming 0.13
 
+  New features:
+
+  * --machine-* switches are no longer coupled with client configurations (hesa,
+    jonkri)
+
   New options:
 
-  --check-machine-status - checks the statuf of a machine (hesa) 
+  --check-machine-status - checks the status of a machine (hesa) 
 
 
   Fixes:
+
   * VBox clients are no longer mistaken for Androids (jonkri)
+
   * $SSH now has a default value (jonkri)
+
   * --check-client-online no longer faults with "Bad port '@'" (jonkri)
+
   * --check-client-status now has an android implementation (hesa)
+
+  * --*-machine options now works for VirtualBox devices (jonkri)
   
 
   Bugfixes:
@@ -23,5 +34,7 @@ NEWS in coming 0.13
 
   * Github issue #18 "Virtual machine names can not have spaces in them" (hesa)
 
-  * Fixed a bug which prohibited starting headless machines
+  * Fixed a bug which prohibited starting headless machines (jonkri)
 
+  * `--pause-machine' and `--resume-machine' now interpreted by the command-line
+    argument parser (jonkri)
