Get info and settings only once, assist user w/ conf, various fixes
I apologize for a quite messy patch. Some things were worked on in
parallel here for various reasons.

This patch will verify that a client configuration exists before
proceeding, and will offer to help create one if a machine with a
corresponding name is found.

This patch will also verify that there is an actual machine
corresponding to the specified client.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,9 @@ NEWS in coming 0.13
   * --machine-* switches are no longer coupled with client configurations (hesa,
     jonkri)
 
+  * Will interactively assist the user to create a client configuration if the
+    client doesn't have one but the machine exists (jonkri)
+
   * Improved documentation (hesa, jonkri)
 
   New options:
